name:                rosmsg-bin
version:             0.1.0.0
synopsis:            ROS message management tools
description:         Please see README.md
homepage:            https://github.com/RoboticsHS/rosmsg-bin#readme
license:             BSD3
license-file:        LICENSE
author:              Alexander Krupenkin
maintainer:          mail@akru.me
copyright:           (c) 2016 Alexander Krupenkin
category:            Robotics
build-type:          Simple
cabal-version:       >=1.10

executable rosmsg
  hs-source-dirs:      app/rosmsg
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , text
                     , rospkg
                     , filepath
  default-language:    Haskell2010

executable genhs
  hs-source-dirs:      app/genhs
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , text
                     , stack
                     , rospkg
                     , rosmsg
                     , filepath
                     , temporary
                     , monad-logger
  other-modules:       Template
                     , Stack
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/RoboticsHS/rosmsg-bin
